--- a/src/custom.scss
+++ b/src/custom.scss
@@ -112,12 +112,7 @@ html{
         top: 0vh;
     }
 
-    .search{
-        height:4vw;
-        left:96vw;
-        position:absolute;
-        z-index:100;
-    }
+   
     .footer {
         margin-left: 20vw;
     
@@ -159,12 +154,7 @@ html{
         top: 0vh;
     }
 
-    .search{
-        height:4vw;
-        left:96vw;
-        position:absolute;
-        z-index:100;
-    }
+  
     .footer {
         margin-left: 20vw;
     
@@ -186,13 +176,7 @@ html{
         line-height: 24px;
     }
     
-    .search{
-        height:4vw;
-        left:82vw;
-        position:absolute;
-        z-index:100;
-        top:16px;
-    }
+  
   
     .footer {
         margin-left: 0vw;
